# imu_reader

./: CMakeLists.txt  README.md  main.c  usb_serial_reader.py
src/: CMakeLists.txt
src/Fusion/Fusion/: InitFusion.c  InitFusion.h
src/cmake_utils/: CMakeLists.txt
src/imu_reader/: CMakeLists.txt  imu_reader.c  imu_reader.h
src/imu_reader/Fusion/: CMakeLists.txt
src/imu_reader/Fusion/Fusion/: CMakeLists.txt  InitFusion.c
src/imu_reader/i2c/: CMakeLists.txt  i2c_helpers.h
src/imu_reader/ism330dlc/: CMakeLists.txt  ism330dlc.c  ism330dlc.h  ism330dlc_config.h
src/imu_reader/settings/: CMakeLists.txt  settings.c  settings.h
src/imu_reader/utils/: CMakeLists.txt  bit_ops.c  bit_ops.h  output.c  output.h
src/sh2_wrapper/: sh2_paketti.c
